# SimulatedRolling

./: CMakeLists.txt  interpolatinoChart.h  interpolationChart.cpp  main.cpp  objectIR.h  rolling.h  rollingImp.cpp
config/: config.txt  参数信息.txt
